Fixing layout issues, adding button to homepage

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 /* =======================================================
     Basic Tag Styling
 ========================================================== */
-/* Default Style*/
 
+/* Default Style*/
 *{
     margin:0;
     padding:0;
@@ -15,29 +15,6 @@
 body {
     background-image: url("images/grid.png");
 }
-
-/* resize p for small screens - one column */
-    @media only screen and (max-width: 600px) {
-        .header {
-            width: 350px;
-        }
-
-        .logo {
-            margin-left: auto;
-            margin-right: auto;
-            float: none;
-        }
-
-        nav {
-            float: none;
-            display: flex;
-            justify-content: center;
-        }
-
-        .main {
-            width: 350px;
-        }
-    }
 
 h1 {
     font-family: 'Lato', sans-serif;
@@ -71,15 +48,19 @@ p {
     line-height: 1.6em;
 }
 
+p.active {
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: gray;
+    width: fit-content;
+}
+
 a {
     font-family: 'Lato', sans-serif;
     color: black;
     font-size: 1rem;
     font-weight: 400;
-    text-decoration: underline #9e9e9e;
-    text-decoration-thickness: 1px;
 }
-
 
 /* =======================================================
     Header Elements
@@ -115,15 +96,8 @@ nav li a {
     text-decoration: none;
 }
 
-a:hover{
+nav li a:hover{
     font-style: italic;
-}
-
-p.active {
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-bottom-color: gray;
-    width: fit-content;
 }
 
 /* =======================================================
@@ -131,15 +105,16 @@ p.active {
 ========================================================== */
 .main {
     width: 80%;
-    min-width: 300px;
     display: block;
     margin: auto;
-    padding-top: 100px;
-    /*height: 60%;*/
 }
 
-.container {
+.container-desktop {
   display: inline-block;
+}
+
+.container-mobile{
+  display: none;
 }
 
 .centered-content {
@@ -152,21 +127,13 @@ p.active {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    min-width: 300px;
 }
 
-.column {
-    width: 33%;
-    position: relative;
-    min-width: 200px;
+.row-spacer {
+    display: none;
 }
 
-.column p {
-    padding-bottom: 20px;
-    padding-right: 25px;
-}
-
-.column img {
+.row img {
     width: 95%;
     display: block;
     margin-left: auto;
@@ -175,19 +142,133 @@ p.active {
     margin-bottom: 50px;
 }
 
-.text-box {
-    padding-left: 10px;
-/*    padding-left: 50px;
-    padding-right:50px;
-    min-width: 300px;*/
-
+.column {
+    position: relative;
+    width: 30%;
 }
+
+.column-desktop {
+    position: relative;
+    width: 30%;
+}
+
+.column-mobile {
+    display: none;
+}
+
+.column-medium {
+    position: relative;
+    width: 40%;
+}
+
+.column-large {
+    position: relative;
+    width: 60%;
+}
+
+.spacer {
+    width: 10%;
+}
+
+.button-link {
+    text-align: center;
+    margin:auto;
+
+    font-family: 'Lato', sans-serif;
+    color: #3fa9a0;
+    font-weight: 600;
+    font-size: 1rem;
+    text-decoration: none;
+
+    background-color: #f6f6f680;
+    padding: 10px 15px;
+    border: 2px solid #53b7ae;
+    border-radius: 100px;
+}
+
+.button-link:hover {
+    color: #ffffff;
+    font-style: none;
+    background-color: #53b7ae;
+}
+
+/*#topButton {
+  display: none; *//* Hidden by default *//*
+  position: sticky; *//* Fixed/sticky position *//*
+  float: right;
+  bottom: 50px; *//* Place the button at the bottom of the page *//*
+  right: 50px; *//* Place the button 30px from the right *//*
+  z-index: 99; *//* Make sure it does not overlap *//*
+
+  border: 3px solid #d3d3d3;
+  background-color: #f6f6f680; *//* Set a background color *//*
+  color: white; *//* Text color *//*
+  cursor: pointer; *//* Add a mouse pointer on hover *//*
+  padding: 25px; *//* Some padding *//*
+  border-radius: 100%; *//* Rounded corners *//*
+  font-size: 18px; *//* Increase font size *//*
+}*/
+
+/* =======================================================
+    Resizing for Mobile
+========================================================== */
+    @media only screen and (max-width: 700px) {
+
+        .column, .column-medium, .column-large {
+            width: 90%;
+        }
+
+        .column-mobile{
+            display: block;
+            width: 90%;
+        }
+
+        .column-desktop {
+            display: none;
+        }
+
+        .row-spacer{
+           display: block;
+        }
+
+        .spacer{
+            display: none;
+        }
+
+        /* Center header elements*/
+        .logo {
+            margin-left: auto;
+            margin-right: auto;
+            float: none;
+        }
+
+        nav {
+            float: none;
+            display: flex;
+            justify-content: center;
+        }
+
+        /* Change content borders for mobile */
+        .main {
+            width: 85%;
+        }
+
+        /* hide desktop view, show mobile view */
+        .container-desktop {
+            display:none;
+        }
+
+        .container-mobile {
+            display: inline-block;
+        }
+    }
 
 /* =======================================================
     Footer Elements
 ========================================================== */
 .footer{
     background-color: lightgray;
+    width: 80%;
 }
 
 .inner-footer {
@@ -202,19 +283,6 @@ p.active {
     Animations
 ========================================================== */
 
-/* #88FFD9 #00f5d4*/
-/*
-svg {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    z-index: -1;
-    opacity: 30%;
-}
-*/
-
 .typed-out {
   overflow: hidden;
   font-family: 'Lato', sans-serif;
@@ -223,9 +291,19 @@ svg {
   font-weight: 400;
   width: 0;
   white-space: nowrap;
-  animation:
-  typing 1.5s steps(20, end) forwards,
-  blink 1.5s forwards;
+  animation: typing 1.5s steps(20, end) forwards, blink 1.5s forwards;
+}
+
+.typed-out-nth {
+  overflow: hidden;
+  font-family: 'Lato', sans-serif;
+  color: black;
+  font-size: 28px;
+  font-weight: 400;
+  width: 0;
+  white-space: nowrap;
+  animation: typing 1.5s steps(20, end) forwards, blink 1.5s forwards;
+  animation-delay: 1.5s;
 }
 
 @keyframes typing {
@@ -241,7 +319,6 @@ svg {
     animation: arrow-movement 2s ease-in-out infinite;
 }
 
-
 @keyframes arrow-movement {
     0% {
         opacity: 1;
@@ -255,7 +332,6 @@ svg {
     }
 }
 
-
 @media (prefers-reduced-motion: no-preference){
 .main.row.column img {
     animation: fade-in linear forwards;
@@ -267,7 +343,7 @@ svg {
     animation: fade-in linear;
     animation-timeline: view();
     animation-range-start: cover;
-    animation-range-end: contain 30%;
+    animation-range-end: contain 10%;
 }
 
 @keyframes fade-in {
@@ -285,30 +361,6 @@ svg {
 @keyframes fade-up {
     from {opacity: 0;}
     to {opacity: 1;}
-}
-
-
-.tag-cloud {
-  display: inline-block;
-  font-family: 'Lato', sans-serif;
-  color: white;
-  padding: 8px 15px;
-  border-radius: 25px;
-  background-color: #A9A9A9;
-  margin-right: 10px;
-  margin-bottom:5px;
-  font-size: 16px;
-/*      scale: .5; opacity: 0;*/
-/*      animation: fade-in linear forwards;*/
-/*    animation-timeline: scroll();*/
-  animation-duration: 5s;
-  animation-timeline: view();
-  animation-range-start: cover;
-  animation-range-end: 40vh;
-}
-
-/*.bubble {
-    border-spacing: 20px
 }
 
 @media (prefers-reduced-motion: no-preference){
